<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.weightmate.FoodListActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/food_search_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search_foodList"
        android:ems="10" />

    <Button
        android:id="@+id/food_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_food_button"
        android:layout_toRightOf="@id/food_search_edit" />

    <Button
        android:id="@+id/add_food_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/add_food_edit"
        android:layout_toRightOf="@+id/add_food_edit"
        android:text="@string/add_food_button" />

    <EditText
        android:id="@+id/add_food_edit"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recent_food_scroll"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:hint="@string/add_food" />

    <ScrollView
        android:id="@+id/recent_food_scroll"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/add_food_button"
        android:layout_alignLeft="@+id/food_search_edit"
        android:layout_below="@+id/recent_food_title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/food_list_contents"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="McDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\n
                	McDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\nMcDonalds\n"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/recent_food_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/food_search_edit"
        android:layout_below="@+id/food_search_edit"
        android:text="@string/recent_foods"
        android:textSize="36sp" />

</RelativeLayout>
