<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weightmate.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/calculator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/calendar_button"
        android:layout_alignRight="@+id/calendar_button"
        android:layout_below="@+id/calendar_button"
        android:layout_marginTop="36dp"
        android:onClick="toCalculator"
        android:text="@string/calculator_button" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calendar_button"
        android:layout_alignLeft="@+id/calendar_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/food_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/calendar_button"
        android:layout_alignBottom="@+id/calendar_button"
        android:layout_alignRight="@+id/imageView1"
        android:layout_toRightOf="@+id/calendar_button"
        android:onClick="toFoodList"
        android:text="@string/food_button" />

    <Button
        android:id="@+id/extras_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/calculator_button"
        android:layout_alignLeft="@+id/food_button"
        android:layout_alignRight="@+id/food_button"
        android:text="@string/extras_button"
        android:onClick="toExtras" />

    <Button
        android:id="@+id/calendar_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:onClick="toCalendar"
        android:text="@string/calendar_button" />

</RelativeLayout>